	NX-922 (Service check template objects disappears after server restart)
	NX-1097 (Configuration option to ignore alarm's helpdesk state when doing resolve or terminate)
	NX-1157 (configure --with-dist fails if OpenSSL is not installed)
	NX-1397 (Implement Windows Update information parameters for Windows 10 and Windows Server 2016)
	NX-1417 (File.Size parameter not working for Windows pagefile.sys)
	NX-1418 (Sort scripts in Execute Server Script dropdown)
	NX-1419 (AgentTunnels.ProcessUnbound scheduled task should be hidden)
	NX-1420 (Do not use unmanaged devices with SNMP for MAC resolving)
	NX-1421 (Configuration poll for node without SNMP and agent always read ARP cache from all SNMP devices in subnet)
	NX-1431 ("Don't Fragment" option for ping sub-agent)
	NX-1433 (LDAP timeout blocks internal user database)
	NX-1434 (Return from function from within foreach loop in NXSL can cause unexpected runtime error)
	NX-1436 (Write hostname to agent log on startup)
	NX-1442 (Generic device driver cannot read interface list if device does not support ifNumber MIB object)
   NX-1446 ( Only one agent policy editor can be opened, if another policy is opened for editing, previous is closed without saving)


*
* 2.2.4
*

- Portech SMS gateway works correctly with newer gateway versions
- Fixed issues:
	NX-1208 (Added filter to alarm list)
	NX-1295 (MIB Walk from DCI missing Column)
	NX-1332 (Execution timeout for external parameter provider)
	NX-1337 (Map link color based on object status)
	NX-1346 (Unable to select template group on config export)
	NX-1400 (NetworkMap link can be locked when using bendpoints)
	NX-1403 (Setting floor plan view from right-click menu does not work)
	NX-1404 (No source node in events generated by syslog parser)
	NX-1405 (Agent may crash when parsing Windows event log message)
	NX-1408 (Object filtering by zone in object browser and object search form)
	NX-1411 (Server configuration option "UseInterfaceAliases" not working)