@@ -21,9 +21,9 @@
 **/
 
 #include "nxagentd.h"
+#include <nxstat.h>
 
-#if defined(_WIN32)
-#include <shlobj.h>
+#ifdef _WIN32
 #include <conio.h>
 #else
 #include <signal.h>
@@ -53,8 +53,6 @@
 #if HAVE_PWD_H
 #include <pwd.h>
 #endif
-
-#define DEFAULT_CONFIG_SECTION   _T("CORE")
 
 /**
  * Externals
@@ -109,6 +107,11 @@ void LIBNXAGENT_EXPORTABLE InitSubAgentAPI(void (* writeLog)(int, int, const TCH
                                            DB_HANDLE (* getLocalDatabaseHandle)(),
                                            CONDITION shutdownCondition, const TCHAR *dataDirectory);
 
+int CreateConfig(const char *pszServer, const char *pszLogFile, const char *pszFileStore,
+   const char *configIncludeDir, int iNumSubAgents, char **ppszSubAgentList);
+void InitConfig(const TCHAR *configSection);
+bool LoadConfig();
+
 /**
  * Messages generated by mc.pl (for UNIX version only)
  */
@@ -160,6 +163,7 @@ TCHAR g_szSharedSecret[MAX_SECRET_LENGTH] = _T("admin");
 TCHAR g_szConfigFile[MAX_PATH] = AGENT_DEFAULT_CONFIG;
 TCHAR g_szFileStore[MAX_PATH] = AGENT_DEFAULT_FILE_STORE;
 TCHAR g_szDataDirectory[MAX_PATH] = AGENT_DEFAULT_DATA_DIR;
+TCHAR g_dataDirRecoveryPath[MAX_PATH] = _T("");
 TCHAR g_szPlatformSuffix[MAX_PSUFFIX_LENGTH] = _T("");
 TCHAR g_szConfigServer[MAX_DB_STRING] = _T("not_set");
 TCHAR g_szRegistrar[MAX_DB_STRING] = _T("not_set");
@@ -257,7 +261,6 @@ static NX_CFG_TEMPLATE m_cfgTemplate[] =
    { _T("ControlServers"), CT_STRING_LIST, ',', 0, 0, 0, &m_pszControlServerList, NULL },
    { _T("CreateCrashDumps"), CT_BOOLEAN, 0, 0, AF_CATCH_EXCEPTIONS, 0, &g_dwFlags, NULL },
    { _T("DataCollectionThreadPoolSize"), CT_LONG, 0, 0, 0, 0, &g_dcMaxCollectorPoolSize, NULL },
-	{ _T("DataDirectory"), CT_STRING, 0, 0, MAX_PATH, 0, g_szDataDirectory, NULL },
    { _T("DataReconciliationBlockSize"), CT_LONG, 0, 0, 0, 0, &g_dcReconciliationBlockSize, NULL },
    { _T("DataReconciliationTimeout"), CT_LONG, 0, 0, 0, 0, &g_dcReconciliationTimeout, NULL },
    { _T("DailyLogFileSuffix"), CT_STRING, 0, 0, 64, 0, s_dailyLogFileSuffix, NULL },
@@ -790,6 +793,8 @@ BOOL Initialize()
 		nxlog_write_generic(NXLOG_INFO, _T("Switched to external subagent loader mode, master agent address is %s"), g_masterAgent);
 	}
 
+   if (g_dataDirRecoveryPath[0] != 0)
+      nxlog_write_generic(NXLOG_INFO, _T("Data directory recovered from %s"), g_dataDirRecoveryPath);
 	nxlog_write_generic(NXLOG_INFO, _T("Data directory: %s"), g_szDataDirectory);
    CreateFolder(g_szDataDirectory);
 
@@ -800,6 +805,8 @@ BOOL Initialize()
    nxlog_debug(2, _T("Effective user ID %d"), (int)geteuid());
    nxlog_debug(2, _T("Effective group ID %d"), (int)getegid());
 #endif
+
+   nxlog_debug(2, _T("Configuration policy directory: %s"), g_szConfigPolicyDir);
 
    // Initialize log parser policy folder
    TCHAR tail = g_szDataDirectory[_tcslen(g_szDataDirectory) - 1];
@@ -814,8 +821,6 @@ BOOL Initialize()
               ((tail != '\\') && (tail != '/')) ? FS_PATH_SEPARATOR : _T(""));
    nxlog_debug(2, _T("Certificate directory: %s"), g_certificateDirectory);
    CreateFolder(g_certificateDirectory);
-
-   nxlog_debug(2, _T("Configuration policy directory: %s"), g_szConfigPolicyDir);
 
 #ifdef _WIN32
    WSADATA wsaData;
@@ -1334,76 +1339,6 @@ static void DoRestartActions(UINT32 dwOldPID)
 }
 
 /**
- * Create configuration file
- */
-static int CreateConfig(const char *pszServer, const char *pszLogFile, const char *pszFileStore,
-                        const char *configIncludeDir, int iNumSubAgents, char **ppszSubAgentList)
-{
-   FILE *fp;
-   time_t currTime;
-   int i;
-
-   if (_taccess(g_szConfigFile, 0) == 0)
-      return 0;  // File already exist, we shouldn't overwrite it
-
-   fp = _tfopen(g_szConfigFile, _T("w"));
-   if (fp != NULL)
-   {
-      currTime = time(NULL);
-      _ftprintf(fp, _T("#\n# NetXMS agent configuration file\n# Created by agent installer at %s#\n\n"),
-                _tctime(&currTime));
-      _ftprintf(fp, _T("MasterServers = %hs\nConfigIncludeDir = %hs\nLogFile = %hs\nFileStore = %hs\n"),
-                pszServer, configIncludeDir, pszLogFile, pszFileStore);
-
-      Array extSubAgents;
-      for(i = 0; i < iNumSubAgents; i++)
-      {
-         if (!strnicmp(ppszSubAgentList[i], "EXT:", 4))
-         {
-            extSubAgents.add(ppszSubAgentList[i] + 4);
-         }
-         else
-         {
-            _ftprintf(fp, _T("SubAgent = %hs\n"), ppszSubAgentList[i]);
-         }
-      }
-
-      for(i = 0; i < extSubAgents.size(); i++)
-      {
-         char section[MAX_PATH];
-         strncpy(section, (const char *)extSubAgents.get(i), MAX_PATH);
-         char *eptr = strrchr(section, '.');
-         if (eptr != NULL)
-            *eptr = 0;
-         strupr(section);
-         _ftprintf(fp, _T("\n[EXT:%hs]\n"), section);
-         _ftprintf(fp, _T("SubAgent = %hs\n"), (const char *)extSubAgents.get(i));
-      }
-
-      fclose(fp);
-   }
-   return (fp != NULL) ? 0 : 2;
-}
-
-/**
- * Init config
- */
-static void InitConfig(const TCHAR *configSection)
-{
-	g_config = new Config();
-	g_config->setTopLevelTag(_T("config"));
-   g_config->setAlias(_T("agent"), configSection);
-
-   // Set default data directory on Windows
-#ifdef _WIN32
-   if (SHGetFolderPath(NULL, CSIDL_LOCAL_APPDATA, NULL, SHGFP_TYPE_CURRENT, g_szDataDirectory) == S_OK)
-   {
-      _tcscat(g_szDataDirectory, _T("\\nxagentd"));
-   }
-#endif
-}
-
-/**
  * Initiate shutdown of connected external subagents
  */
 static void InitiateExtSubagentShutdown()
@@ -1805,22 +1740,10 @@ int main(int argc, char *argv[])
    }
 #endif
 
-   if (!_tcscmp(g_szDataDirectory, _T("{default}")))
-   {
-      GetNetXMSDirectory(nxDirData, g_szDataDirectory);
-   }
-
-   // Initialize config policy folder and load policy based configs
-   nx_strncpy(g_szConfigPolicyDir, g_szDataDirectory, MAX_PATH - 16);
-   if (g_szConfigPolicyDir[_tcslen(g_szConfigPolicyDir) - 1] != FS_PATH_SEPARATOR_CHAR)
-      _tcscat(g_szConfigPolicyDir, FS_PATH_SEPARATOR);
-   _tcscat(g_szConfigPolicyDir, CONFIG_AP_FOLDER FS_PATH_SEPARATOR);
-   CreateFolder(g_szConfigPolicyDir);
+   InitConfig(configSection);
 
    if (bRestart)
       DoRestartActions(dwOldPID);
-
-   InitConfig(configSection);
 
    // Do requested action
    switch(iAction)
@@ -1857,15 +1780,8 @@ int main(int argc, char *argv[])
             }
          }
 
-			if (g_config->loadConfig(g_szConfigFile, DEFAULT_CONFIG_SECTION))
+			if (LoadConfig())
 			{
-				const TCHAR *dir = g_config->getValue(_T("/%agent/ConfigIncludeDir"));
-				if (dir != NULL)
-					nx_strncpy(g_szConfigIncludeDir, dir, MAX_PATH);
-				g_config->loadConfigDirectory(g_szConfigIncludeDir, DEFAULT_CONFIG_SECTION);
-
-			   g_config->loadConfigDirectory(g_szConfigPolicyDir, DEFAULT_CONFIG_SECTION);
-
             // Check if master section starts with EXT:
             // If yes, switch to external subagent mode
             if (!_tcsnicmp(configSection, _T("EXT:"), 4))
@@ -2041,33 +1957,7 @@ int main(int argc, char *argv[])
          break;
       case ACTION_CHECK_CONFIG:
          {
-            bool validConfig = g_config->loadConfig(g_szConfigFile, DEFAULT_CONFIG_SECTION, false);
-            if (validConfig)
-            {
-				   const TCHAR *dir = g_config->getValue(_T("/%agent/ConfigIncludeDir"));
-               if (dir != NULL)
-               {
-                  validConfig = g_config->loadConfigDirectory(dir, DEFAULT_CONFIG_SECTION, false);
-                  if (!validConfig)
-                  {
-                     ConsolePrintf(_T("Error reading additional configuration files from \"%s\"\n"), dir);
-                  }
-               }
-            }
-            else
-            {
-               ConsolePrintf(_T("Error loading configuration from \"%s\" section ") DEFAULT_CONFIG_SECTION _T("\n"), g_szConfigFile);
-            }
-
-            if (validConfig)
-            {
-               validConfig = g_config->loadConfigDirectory(g_szConfigPolicyDir, DEFAULT_CONFIG_SECTION);
-               if (!validConfig)
-               {
-                  ConsolePrintf(_T("Error reading additional configuration files from \"%s\"\n"), g_szConfigPolicyDir);
-               }
-            }
-
+            bool validConfig = LoadConfig();
             if (validConfig)
             {
                g_config->print(stdout);
